tdf#75539 ww8import: fix horizontalLine percentage

The formula previously divided by 1000, which was a common
dxaGoal width from MSO2003 (based on round-trip testing).
But for the bug document, that formuala didn't work.

An "assert (false)" with "make check" indicates that only
unit test n757118.doc contains a percentage-derived width,
and that test also has dxaGoal == 1000. So, my pool of
test documents is pretty small, but it seems logical that
this is a better formula since it fixes an obviously
bad example, and explains why it "worked before".

Change-Id: I7bf666e88e7e59e06bbfa3c0961fa8eabbc80310